# justice-agent

./: .gitignore  CLAUDE.md  README.md  database_info.md  env.example  pyproject.toml  requirements.txt  run.sh  simple_agent.py
agents/: web_justice_agent.py
tests/test_tools/: README.md  quick_test.py  test_api_simulation.py  test_basic_connectivity.py  test_final_complete.py  test_process.py  test_real_data.py
tools/: README.md  __init__.py  config.py  document_consultation.py  hybrid_process_search.py  process_consultation.py  test_tools.py
tools/integrations/: __init__.py  web_justice_client.py
tools/utils/: __init__.py  document_validator.py  polling_manager.py  process_validator.py
