[project]
name = "justice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.11",
    "fastapi>=0.116.1",
    "python-dotenv>=1.0.1",
    "groq>=0.31.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "websockets>=11.0",
    "openai>=1.101.0",
]
